terraform_code/vpc/eks_setup.tf
provider "aws" {
  region = "us-east-1"
}


// EC2
resource "aws_instance" "demo-server" {
  ami                    = "ami-053b0d53c279acc90"
  instance_type          = "t2.micro"
  key_pair               = "DevOps_Project_Key"
  vpc_security_group_ids = [aws_security_group.demo-sg.id]
  #   security_groups = ["demo-sg"]
  subnet_id = aws_subnet.demo-public-subnet-01.id
  for_each  = toset(["jenkins-master", "jenkins-slave", "ansible"])
  tags = {
    Name = "${each.key}"
  }
}


// Security Group
resource "aws_security_group" "demo-sg" {
  name        = "demo-sg"
  description = "Allow TLS inbound traffic"
  vpc_id      = aws_vpc.demo-vpc.id

  ingress {
    description = "SSH access port"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Jenkins access port"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "ssh-port"
  }
}


// VPC
resource "aws_vpc" "demo-vpc" {
  cidr_block       = "10.1.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "demo-vpc"
  }
}


// Subnet
resource "aws_subnet" "demo-public-subnet-01" {
  vpc_id                  = aws_vpc.demo-vpc.id
  cidr_block              = "10.1.1.0/24"
  map_public_ip_on_launch = "true"
  availability_zone       = "us-east-1a"

  tags = {
    Name = "demo-public-subnet-01"
  }
}

resource "aws_subnet" "demo-public-subnet-02" {
  vpc_id                  = aws_vpc.demo-vpc.id
  cidr_block              = "10.1.2.0/24"
  map_public_ip_on_launch = "true"
  availability_zone       = "us-east-1b"

  tags = {
    Name = "demo-public-subnet-02"
  }
}


// Internet Gateway
resource "aws_internet_gateway" "demo-igw" {
  vpc_id = aws_vpc.demo-vpc.id

  tags = {
    Name = "demo-igw"
  }
}


// Route table 
resource "aws_route_table" "demo-public-rt" {
  vpc_id = aws_vpc.demo-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.demo-igw.id
  }

  tags = {
    Name = "demo-public-rt"
  }
}


// Route table association
resource "aws_route_table_association" "demo-rta-public-subnet-01" {
  subnet_id      = aws_subnet.demo-public-subnet-01.id
  route_table_id = aws_route_table.demo-public-rt.id
}

resource "aws_route_table_association" "demo-rta-public-subnet-02" {
  subnet_id      = aws_subnet.demo-public-subnet-02.id
  route_table_id = aws_route_table.demo-public-rt.id
}

module "sgs" {
  source = "../sg_eks"
  vpc_id = aws_vpc.demo-vpc.id
}

module "eks" {
  source     = "../eks"
  vpc_id     = aws_vpc.demo-vpc.id
  subnet_ids = [aws_subnet.demo-public-subnet-01.id, aws_subnet.demo-public-subnet-02.id]
  sg_ids     = module.sgs.security_group_public
}
